--- a/index.Rmd
+++ b/index.Rmd
@@ -18,8 +18,8 @@ This very simple app does the following:
 1. It randomly generates 5000 samples from a Normal Distribution
 2. The paremeters of the distribution are unknown to the user
 3. It plots a Histogram from the Sample Data
-4. It plots requests the input of the user to find the best curve that fits the Histogram
-5. It reacts to user input by drawing the density lines over the histogram
+4. It requests the input of the user to find the best curve to fit the Histogram
+5. It reacts to the user input by redrawing the density lines over the histogram
 
 --- .class #id 
 
@@ -27,10 +27,10 @@ This very simple app does the following:
 
 Details of the Implementation
 
-1. Input parameters at UI are: mean, sd, and number of bins for the histogram
-2.  Basically, the user will try to guess the correct parameters that generate the histogram
+1. Input parameters at the UI are: mean and standard deviation
+2. Basically, the user will try to guess the correct parameters that generate the histogram
 3. User will adjust the input values as the density lines are redrawn on top of the histogram plot
-4. The code fixes the number of random samples to 5000
+4. The code sets the number of random samples to 5000
 5. The mean parameter for the Normal distribution is between -10 and 10
 6. The standard deviation parameter for the Normal distribution is between 0.5 and 5
 7. User's choice will be limited within the above range
@@ -44,14 +44,19 @@ Details of the Implementation
 ```{r opts.label = 'interactive', cache=FALSE, results = 'asis'}
 library(shiny)
 shinyUI(pageWithSidebar(
-  headerPanel("Guess the parameters for a Normal PDF for best fit"), 
+  headerPanel("Best fit for a Normal Distribution"),
   sidebarPanel(
-    sliderInput('nbreaks', 'Number of Breaks in the Histogram', 10, min = 10, max = 100, step = 10),
     numericInput('meanvalue', 'Sample Mean', 0, min = -10, max = 10, step = 0.5),
     numericInput('sdvalue', 'Sample Standard Deviation', 1, min = 0.5, max = 5, step = 0.5)
               ),
   mainPanel(
-    h3('Plot'),
+    h3("This is a histogram of 5000 random samples from a Normal Distribution"),
+    h4("Your task is to guess its mean and standard deviation"),
+    h4("As you change the input parameters:"),
+    h5("1. The density will be recalculated"),
+    h5("2. New line curve will appear in the panel"),
+    h4("When you feel that you reached the best fit, 
+       you have the approximated mean and sd"),
     plotOutput('newHist')
   )
 ))
@@ -62,16 +67,16 @@ shinyUI(pageWithSidebar(
 ## server.R code
 1. Simple server.R code
 ```{r opts.label = 'interactive', cache=FALSE, results = 'asis'}
- x <- rnorm(5000, mean = runif(1, -10, 10), sd = runif(1, 0.5, 5))
- library(shiny)
- shinyServer(
+x <- rnorm(5000, mean = runif(1, -10, 10), sd = runif(1, 0.5, 5))
+library(shiny)
+shinyServer(
   function(input, output) {
     output$newHist <- renderPlot(
       {
         # Generate a Random Normal PDF with the input parameters from UI 
         x2 <- rnorm(5000, mean = input$meanvalue, sd = input$sdvalue)
-        hist(x, breaks = input$nbreaks, xlab='Random Sample- Normal PDF', col='lightblue', 
-             main='Histogram', probability = TRUE)
+        hist(x, breaks = 100, xlab='Random Sample- Normal PDF', 
+             col='lightblue',main='Histogram', probability = TRUE)
         lines(density(x2), lty="dotted", col="red", lwd=2)
               } #end code inside renderplot
   ) #end cal to renderplot
@@ -86,4 +91,3 @@ shinyUI(pageWithSidebar(
 1. Anyone can run the app at: 
 https://steniofernandes.shinyapps.io/DDP_HistApp/
 
---- .class #id 
