--- a/index.Rmd
+++ b/index.Rmd
@@ -47,8 +47,7 @@ shinyUI(pageWithSidebar(
   headerPanel("Best fit for a Normal Distribution"),
   sidebarPanel(
     numericInput('meanvalue', 'Sample Mean', 0, min = -10, max = 10, step = 0.5),
-    numericInput('sdvalue', 'Sample Standard Deviation', 1, min = 0.5, max = 5, step = 0.5)
-              ),
+    numericInput('sdvalue', 'Sample Standard Deviation', 1, min = 0.5, max = 5, step = 0.5)),
   mainPanel(
     h3("This is a histogram of 5000 random samples from a Normal Distribution"),
     h4("Your task is to guess its mean and standard deviation"),
